data/derived/sp14/progs/unify/prog2489.ml.out
Characters 0-11:
  digitsOfInt -5;;
  ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
